--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "firebase": "^9.21.0",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.7.0",
     "vue-router": "^3.5.1",
     "vue-textarea-autosize": "^1.1.1",
