--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "firebase": "^9.21.0",
+    "image-conversion": "^2.1.1",
     "v-tooltip": "^2.1.3",
-    "vue": "^2.7.0", 
+    "vue": "^2.7.0",
     "vue-router": "^3.5.1",
     "vue-textarea-autosize": "^1.1.1",
     "vuetify": "^2.6.0",
